# python-devenv

./: .gitignore  README.md  devenv.nix  main.py  pyproject.toml
app/: api.py
