[tool.poetry]
package-mode = false
name = "python-devenv"
version = "0.1.0"
description = ""
authors = ["Wes Braga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
